--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -21,4 +21,5 @@
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCDQzexr_Tx_D7UeMlG43dwHufS5vrLHxw</string>
+    <string name="direction_key">AIzaSyD7JlLnM287T08bECRsE7bdVLjyB7Qo2D8</string>
 </resources>
