--- a/app/src/main/res/layout/fragment_preference.xml
+++ b/app/src/main/res/layout/fragment_preference.xml
@@ -12,9 +12,12 @@
         android:id="@+id/smoke"
         android:layout_width="102dp"
         android:layout_height="32dp"
-        android:layout_marginStart="132dp"
         android:layout_marginTop="128dp"
         android:text="抽菸:"
+        app:layout_constraintBottom_toTopOf="@+id/pet"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,6 +27,7 @@
         android:layout_height="36dp"
         android:layout_marginTop="20dp"
         android:text="攜帶寵物:"
+        app:layout_constraintBottom_toTopOf="@+id/babySeat"
         app:layout_constraintStart_toStartOf="@+id/smoke"
         app:layout_constraintTop_toBottomOf="@+id/smoke" />
 
@@ -33,6 +37,7 @@
         android:layout_height="33dp"
         android:layout_marginTop="16dp"
         android:text="嬰兒座椅:"
+        app:layout_constraintBottom_toTopOf="@+id/prefSubmit"
         app:layout_constraintStart_toStartOf="@+id/pet"
         app:layout_constraintTop_toBottomOf="@+id/pet" />
 
@@ -40,9 +45,10 @@
         android:id="@+id/prefSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="67dp"
         android:text="儲存設定"
         app:layout_constraintBaseline_toBaselineOf="@+id/prefReset"
+        app:layout_constraintEnd_toStartOf="@+id/prefReset"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -50,8 +56,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="34dp"
-        android:layout_marginTop="49dp"
+        android:layout_marginTop="44dp"
         android:text="重設"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/prefSubmit"
         app:layout_constraintTop_toBottomOf="@+id/babySeat" />
 </android.support.constraint.ConstraintLayout>
