--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -88,7 +88,7 @@
                 android:layout_height="130dp"
                 android:layout_marginStart="60dp"
                 android:layout_marginTop="8dp"
-                android:src="@color/focused"
+                android:src="@drawable/normal_call"
                 android:contentDescription="call"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -100,7 +100,7 @@
                 android:layout_height="130dp"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="8dp"
-                android:src="@drawable/dot_disabled"
+                android:src="@drawable/drunk"
                 android:contentDescription="drunk"
                 app:layout_constraintStart_toEndOf="@+id/callNormal"
                 app:layout_constraintTop_toTopOf="parent"
