--- a/app/src/main/res/layout/fragment_credit_card.xml
+++ b/app/src/main/res/layout/fragment_credit_card.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
 
     <ImageView
         android:id="@+id/chip"
@@ -56,7 +57,8 @@
         android:layout_width="193dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/button"
         android:text="確認修改"
         android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@+id/btnCancel"
@@ -85,6 +87,7 @@
         android:layout_marginTop="48dp"
         android:layout_marginEnd="8dp"
         android:text="修改"
+        android:background="@drawable/longger_button"
         app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
         app:layout_constraintHorizontal_bias="0.437"
         app:layout_constraintStart_toStartOf="@+id/textInputLayout"
@@ -95,8 +98,8 @@
         android:layout_width="194dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/button"
         android:text="取消"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
